--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Password Manager</title>
 
 <script type="text/javascript" src="src/sha512.js"></script>
-<script type="text/javascript" src="../zxcvbn/zxcvbn.js"></script>
+<script type="text/javascript" src="src/zxcvbn.js"></script>
 
 <script type="text/javascript">
     function calc_pw(n) {
