--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 	  document.getElementById("pw_phrase2").value = '';
 	  document.getElementById("strength").value = '';
 	  document.getElementById("pw_same").value = '';
-	  document.getElementById("keyword1").value = 'hn';
+	  document.getElementById("keyword1").value = 'github';
 	  document.getElementById("keyword2").value = 'gmail';
 	  document.getElementById("keyword3").value = 'yahoo';
-	  document.getElementById("keyword4").value = 'kickstarter';
-	  document.getElementById("keyword5").value = 'bofa';
+	  document.getElementById("keyword4").value = 'bofa';
+	  document.getElementById("keyword5").value = 'kickstarter';
 	  document.getElementById("pw1").value = '';
 	  document.getElementById("pw2").value = '';
 	  document.getElementById("pw3").value = '';
