--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 	.header{
 		position: fixed;
-		margin-left: 45%;
+		margin-left: 40%;
 		color: rgb(197, 117, 21);
 	}
 
@@ -78,7 +78,7 @@
 
 	.content{
 		position: fixed;
-		margin-left: 30%;
+		margin-left: 25%;
 		top: 25%;
 		color: rgb(182, 69, 47);
 	}
@@ -86,7 +86,7 @@
 	.table{
 		position: fixed;
 		top: 55%;
-		left: 40%;
+		left: 35%;
 		margin-top: -50px;
   		margin-left: -100px;
   		background-color: #C8C8C8;
@@ -96,6 +96,7 @@
 </head>
 
 <body onload="clear_all()">
+<a href="https://github.com/arelangi/Jumble-Pass"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
 <div class="header">
 	<p>Jumble Pass</p>
