--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <div class="content">
 	<ul>
-		<li>Enter a strong passphrase; preferably one that is easy to <a href="http://xkcd.com/936/">recollect like this </a></li>
+		<li>Enter a strong passphrase; preferably one that is easy to recollect like "Correct horse staple battery"
 		<li>Enter a keyword for each password you wish to generate</li>
 		<li>Generate as many unique passwords you wish</li>
 		<li>Retrieve the passwords anytime you need</li>
