index credits added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
   		margin-left: -100px;
   		background-color: #C8C8C8;
 	}
+
+	.credits{
+		position: fixed;
+		top: 83%;
+		left: 30%;
+	}
 </style>
 
 </head>
@@ -129,7 +135,10 @@
 	<tr><td><input type="text" size="30" name="keyword4" id="keyword4" value="gmail" onkeyup="calc_pw(4)" /></td><td><input type="text" size="30" name="pw4" id="pw4" style="margin-left: 1em;" readonly /></td></tr>
 	<tr><td><input type="text" size="30" name="keyword5" id="keyword5" value="gmail" onkeyup="calc_pw(5)" /></td><td><input type="text" size="30" name="pw5" id="pw5" style="margin-left: 1em;" readonly /></td></tr>
 	</table>
+</div>
 
+<div class="credits">
+	Credits: This is possible because of the work of <a href="https://github.com/Caligatio/">Brian Turek</a> and  <a href="https://github.com/lowe">Dan Wheeler</a>
 </div>
 
 </body>
